// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavList isOpenがfalseの時に\`.nav-list\`が非表示 1`] = `
"<div>
  <transition-stub name=\\"nav-fade\\">
    <div class=\\"nav-list\\" style=\\"display: none;\\">
      <ul>
        <li>
          <div class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
              <p class=\\"base-text--extend\\" use-type=\\"nav\\">ダミーナビゲーション</p>
            </a></div>
        </li>
        <li>
          <div class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
              <p class=\\"base-text--extend\\" use-type=\\"nav\\">ダミーナビゲーション</p>
            </a></div>
        </li>
        <li>
          <div class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
              <p class=\\"base-text--extend\\" use-type=\\"nav\\">ダミーナビゲーション</p>
            </a></div>
        </li>
        <li>
          <div class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
              <p class=\\"base-text--extend\\" use-type=\\"nav\\">ダミーナビゲーション</p>
            </a></div>
        </li>
      </ul>
    </div>
  </transition-stub>
</div>"
`;

exports[`NavList isOpenがtrueの時に\`.nav-list\`が表示 1`] = `
"<div>
  <transition-stub name=\\"nav-fade\\">
    <div class=\\"nav-list\\">
      <ul>
        <li>
          <div class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
              <p class=\\"base-text--extend\\" use-type=\\"nav\\">ダミーナビゲーション</p>
            </a></div>
        </li>
        <li>
          <div class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
              <p class=\\"base-text--extend\\" use-type=\\"nav\\">ダミーナビゲーション</p>
            </a></div>
        </li>
        <li>
          <div class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
              <p class=\\"base-text--extend\\" use-type=\\"nav\\">ダミーナビゲーション</p>
            </a></div>
        </li>
        <li>
          <div class=\\"nav-item\\"><a class=\\"nav-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"ダミーナビゲーションの画像\\" class=\\"base-img base-img--lg\\">
              <p class=\\"base-text--extend\\" use-type=\\"nav\\">ダミーナビゲーション</p>
            </a></div>
        </li>
      </ul>
    </div>
  </transition-stub>
</div>"
`;
